--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link href="css.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Winglet Girls</h1>
-    <div class="topnav">
+    <h1 style="font-family: Arial">Winglet Girls</h1>
+    <div class="topnav" style="font-family: Arial">
       <a class="active" href="#home">Home/About</a>
       <a href="#contact">Contact</a>
     </div>
-    <p>Hey mom can you write something amazing here</p>
+    <p style="font-family: Arial">Hey mom can you write something amazing here</p>
   </body>
 </html>
