--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,15 @@
-
+<html>
+  <head>
+    <title>Winglet Girls | Contact</title>
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link href="css.css" rel="stylesheet">
+  </head>
+  <body>
+    <h1 style="font-family: Arial">Winglet Girls</h1>
+    <div class="topnav" style="font-family: Arial">
+      <a href="index.html">Home/About</a>
+      <a class="active" href="contact.html">Contact</a>
+    </div>
+    <p style="font-family: Arial">Hey mom can you write something amazing here</p>
+  </body>
+</html>
